service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app: node-hostname
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: LoadBalancer
